Bug 9381 - sky2: hardware checksum error
Summary: sky2: hardware checksum error
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Network (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Stephen Hemminger
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-11-14 14:57 UTC by Stephen Hemminger
Modified: 2007-11-21 14:56 UTC (History)
0 users

See Also:
Kernel Version: 2.6.23 and earlier
Subsystem:
Regression: ---
Bisected commit-id:


Attachments

Description Stephen Hemminger 2007-11-14 14:57:09 UTC
SysKonnect boards with Yukon-XL seem to exhibit checksum errors.
Sometimes an incorrect checksum is added to the skb by the driver, but
the data is okay.

Board with problem:
03:01.0 Ethernet controller: D-Link System Inc DGE-550SX PCI-X Gigabit Ethernet Adapter (rev b1)
        Subsystem: D-Link System Inc DGE-550SX PCI-X Gigabit Ethernet Adapter
        Control: I/O+ Mem+ BusMaster+ SpecCycle- MemWINV+ VGASnoop- ParErr- Stepping- SERR- FastB2B-
        Status: Cap+ 66MHz+ UDF- FastB2B+ ParErr- DEVSEL=medium >TAbort- <TAbort- <MAbort- >SERR- <PERR-
        Latency: 64 (2000ns min, 2000ns max), Cache Line Size: 64 bytes
        Interrupt: pin A routed to IRQ 31
        Region 0: Memory at f0100000 (64-bit, non-prefetchable) [size=16K]
        Region 2: I/O ports at 3000 [size=256]
        [virtual] Expansion ROM at f0120000 [disabled] [size=128K]
        Capabilities: [48] Power Management version 2
                Flags: PMEClk- DSI- D1- D2- AuxCurrent=0mA PME(D0-,D1-,D2-,D3hot-,D3cold-)
                Status: D0 PME-Enable- DSel=0 DScale=1 PME-
        Capabilities: [50] Vital Product Data
        Capabilities: [5c] Message Signalled Interrupts: Mask- 64bit+ Queue=0/1 Enable-
                Address: 0000000000000000  Data: 0000
        Capabilities: [6c] PCI-X non-bridge device
                Command: DPERE+ ERO+ RBC=2048 OST=4
                Status: Dev=03:01.0 64bit+ 133MHz+ SCD- USC- DC=simple DMMRBC=2048 DMOST=4 DMCRS=64 RSCEM- 266MHz- 533MHz-

Messages:
eth4: hw csum failure.
[  813.771109] 
[  813.771109] Call Trace:
[  813.771112]  <IRQ>  [<ffffffff80405ecb>] __skb_checksum_complete_head+0x5b/0x60
[  813.771126]  [<ffffffff80405edc>] __skb_checksum_complete+0xc/0x20
[  813.771132]  [<ffffffff8044ad60>] tcp_v4_rcv+0x420/0x9b0
[  813.771139]  [<ffffffff8042bb55>] ip_local_deliver+0x85/0x1f0
[  813.771142]  [<ffffffff8042bff2>] ip_rcv+0x332/0x630
[  813.771147]  [<ffffffff804099d6>] netif_receive_skb+0x206/0x410
[  813.771159]  [<ffffffff8807fba1>] :sky2:sky2_poll+0x561/0xed0
[  813.771164]  [<ffffffff802569a6>] getnstimeofday+0x36/0x90
[  813.771169]  [<ffffffff8040c0d3>] net_rx_action+0x103/0x1a0
[  813.771174]  [<ffffffff80240589>] __do_softirq+0x69/0xe0
[  813.771179]  [<ffffffff8020cd9c>] call_softirq+0x1c/0x30
[  813.771182]  [<ffffffff8020e525>] do_softirq+0x35/0x90
[  813.771184]  [<ffffffff80240518>] irq_exit+0x88/0x90
[  813.771187]  [<ffffffff8020e790>] do_IRQ+0x80/0x100
[  813.771190]  [<ffffffff8020ace0>] default_idle+0x0/0x40
[  813.771192]  [<ffffffff8020c121>] ret_from_intr+0x0/0xa
[  813.771194]  <EOI>  [<ffffffff8021f660>] lapic_next_event+0x0/0x10
[  813.771202]  [<ffffffff8020ad09>] default_idle+0x29/0x40
[  813.771204]  [<ffffffff8020ad95>] cpu_idle+0x75/0xd0
Comment 1 Stephen Hemminger 2007-11-21 14:56:01 UTC
Patch for 2.6.24 submitted.

Note You need to log in before you can comment on or make changes to this bug.